# My-Arithmetic-Svalerio

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  compte_rendu.md  pyproject.toml
src/my_arithmetic_svalerio/: __about__.py  __init__.py
tests/: __init__.py  test_my_arithmetic.py
