[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-svalerio"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Valerio", email = "svalerio@etudiant.univ-lr.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Valerio/my-arithmetic-svalerio#readme"
Issues = "https://github.com/Valerio/my-arithmetic-svalerio/issues"
Source = "https://github.com/Valerio/my-arithmetic-svalerio"

[tool.hatch.version]
path = "src/my_arithmetic_svalerio/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_svalerio tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_svalerio", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_svalerio/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_svalerio = ["src/my_arithmetic_svalerio", "*/my-arithmetic-svalerio/src/my_arithmetic_svalerio"]
tests = ["tests", "*/my-arithmetic-svalerio/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.hatch.envs.default.scripts]
test = "pytest"